# fftpack

./: .gitignore  API-doc-FORD-file.md  CMakeLists.txt  LICENSE  Makefile  README.md  SECURITY.md  cffti1.f  dfour1.f  fftw_test.c  fpm.toml  index.html  meson.build  myf.f90  search.html  test.f90
.github/workflows/: CI.yml  CI_windows.yml  cmake.yml  doc-deployment.yml  fpm-deployment.yml  fpm.yml
cmake/: fftpack.cmake  helper.cmake
config/: fypp_deployment.py
configure/: CMakeLists.txt  install-mod.py  meson.build
dependencies/: CMakeLists.txt
dependencies/test-drive/: CMakeLists.txt
doc/: README.md  index.md
doc/legacy/: Makefile
doc/specs/: fftpack.md  fftpack_kind.md  index.md
example/: CMakeLists.txt  Makefile  bench01_zfft.f90  bench02_zfft.f90  bench03_dfft.f90  bench1.f90  complex-transform.f90  complex_transforms.f90  demo_fftpack_hilbert.f90  example_bench01_zfft.f90  example_bench02_zfft.f90  example_bench03_dfft.f90  example_complex_transforms.f90  real-forward-transform.f90  real-transform.f90  real_transforms.f90
install/: CMakeLists.txt  fftpackConfig.cmake.in  template.pc
interface/: dcosqb.html  dcosqf.html  dcosqi.html  dcost.html  dcosti.html  dct.html  dct_t1.html  dct_t1i.html  dct_t2.html  dct_t23i.html  dct_t3.html  dfftb.html  dfftf.html  dffti.html  dsint.html  dsinti.html  dzfftb.html  dzfftf.html  dzffti.html  fft.html  fftfreq.html  fftshift.html  idct.html  ifft.html  ifftshift.html  iqct.html  irfft.html  qct.html  rfft.html  rfftfreq.html  zfftb.html  zfftf.html  zffti.html
lists/: files.html  modules.html  procedures.html
media/: LICENSE_LOGO.md
module/: fftpack.html  fftpack_dct.html  fftpack_fft.html  fftpack_fftshift.html  fftpack_ifft.html  fftpack_ifftshift.html  fftpack_iqct.html  fftpack_irfft.html  fftpack_kind.html  fftpack_qct.html  fftpack_rfft.html  fftpack_utils.html
page/: doc  index.html
page/specs/: fftpack.html  fftpack_kind.html  index.html
proc/: cfftb1.html  cfftf1.html  cffti1.html  cosqb1.html  cosqf1.html  dcosqb.html  dcosqf.html  dcosqi.html  dcost.html  dcosti.html  dfftb.html  dfftf.html  dffti.html  dsinqb.html  dsinqf.html  dsinqi.html  dsint.html  dsinti.html  dzfftb.html  dzfftf.html  dzffti.html  ezfft1.html  passb.html  passb2.html  passb3.html  passb4.html  passb5.html  passf.html  passf2.html  passf3.html  passf4.html  passf5.html  radb2.html  radb3.html  radb4.html  radb5.html  radbg.html  radf2.html  radf3.html  radf4.html  (+9 more)
sourcefile/: cfftb1.f90.html  cfftf1.f90.html  cffti1.f90.html  cosqb1.f90.html  cosqf1.f90.html  dcosqb.f90.html  dcosqf.f90.html  dcosqi.f90.html  dcost.f90.html  dcosti.f90.html  dfftb.f90.html  dfftf.f90.html  dffti.f90.html  dsinqb.f90.html  dsinqf.f90.html  dsinqi.f90.html  dsint.f90.html  dsinti.f90.html  dzfftb.f90.html  dzfftf.f90.html  dzffti.f90.html  ezfft1.f90.html  fftpack.f90.html  fftpack_dct.f90.html  fftpack_fft.f90.html  fftpack_fftshift.f90.html  fftpack_ifft.f90.html  fftpack_ifftshift.f90.html  fftpack_iqct.f90.html  fftpack_irfft.f90.html  fftpack_qct.f90.html  fftpack_rfft.f90.html  fftpack_utils.f90.html  passb.f90.html  passb2.f90.html  passb3.f90.html  passb4.f90.html  passb5.f90.html  passf.f90.html  passf2.f90.html  (+21 more)
src/: CMakeLists.txt  Makefile  cfftb1.f  cfftb1.f90  cfftf1.f  cfftf1.f90  cffti1.f  cffti1.f90  cosqb1.f  cosqb1.f90  cosqf1.f  cosqf1.f90  dcosqb.f  dcosqb.f90  dcosqf.f  dcosqf.f90  dcosqi.f  dcosqi.f90  dcost.f  dcost.f90  dcosti.f  dcosti.f90  dfftb.f  dfftb.f90  dfftf.f  dfftf.f90  dffti.f  dffti.f90  dsinqb.f  dsinqb.f90  dsinqf.f  dsinqf.f90  dsinqi.f  dsinqi.f90  dsint.f  dsint.f90  dsinti.f  dsinti.f90  dzfftb.f  dzfftb.f90  (+82 more)
src/fftpack/: Makefile  dcosqi.f90  dzfftb.f90  meson.build  passf3.f90  rfftb1.f90
subprojects/: test-drive.wrap
test/: CMakeLists.txt  Makefile  meson.build  test_fftpack.f90  test_fftpack_dcosq.f90  test_fftpack_dcost.f90  test_fftpack_dct.F90  test_fftpack_dct.f90  test_fftpack_dfft.f90  test_fftpack_dsinq.f90  test_fftpack_dsint.f90  test_fftpack_dst.f90  test_fftpack_dzfft.f90  test_fftpack_fft.f90  test_fftpack_fftshift.f90  test_fftpack_hilbert.f90  test_fftpack_ifft.f90  test_fftpack_ifftshift.f90  test_fftpack_iqct.f90  test_fftpack_iqst.f90  test_fftpack_irfft.f90  test_fftpack_original.f90  test_fftpack_parseval.f90  test_fftpack_qct.F90  test_fftpack_qct.f90  test_fftpack_qst.f90  test_fftpack_rfft.f90  test_fftpack_utils.f90  test_fftpack_zfft.f90  tstfft.f
tipuesearch/: tipuesearch_content.js
