srcs += files(
  'cfftb1.f90',
  'dsinqi.f90',
  'fftpack_utils.f90',
  'radbg.f90',
  'cfftf1.f90',
  'dsint.f90',
  'passb2.f90',
  'radf2.f90',
  'cffti1.f90',
  'dsinti.f90',
  'passb3.f90',
  'radf3.f90',
  'cosqb1.f90',
  'dzfftb.f90',
  'passb4.f90',
  'radf4.f90',
  'cosqf1.f90',
  'dzfftf.f90',
  'passb5.f90',
  'radf5.f90',
  'dcosqb.f90',
  'dzffti.f90',
  'passb.f90',
  'radfg.f90',
  'dcosqf.f90',
  'ezfft1.f90',
  'passf2.f90',
  'rfftb1.f90',
  'dcosqi.f90',
  'fftpack_dct.f90',
  'passf3.f90',
  'rfftf1.f90',
  'dcost.f90',
  'fftpack.f90',
  'passf4.f90',
  'rffti1.f90',
  'dcosti.f90',
  'fftpack_fft.f90',
  'passf5.f90',
  'rk.f90',
  'dfftb.f90',
  'fftpack_fftshift.f90',
  'passf.f90',
  'sint1.f90',
  'dfftf.f90',
  'fftpack_ifft.f90',
  'radb2.f90',
  'zfftb.f90',
  'dffti.f90',
  'fftpack_ifftshift.f90',
  'radb3.f90',
  'zfftf.f90',
  'dsinqb.f90',
  'fftpack_irfft.f90',
  'radb4.f90',
  'zffti.f90',
  'dsinqf.f90',
  'fftpack_rfft.f90',
  'radb5.f90'
)
